[tool.poetry]
name = "calendly-cli"
version = "0.1.0"
description = ""
authors = ["Michael Bianco <mike@mikebian.co>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
PyCalendly = "^1.0.0"
python-dotenv = "^0.19.2"
pytz = "^2022.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
ipdb = "^0.13.9"
colorama = "^0.4.5"
black = "^22.8.0"
pylint = "^2.12.2"
isort = "^5.10.1"
rich = "^11.1.0"
docrepr = "^0.2.0"
# try out pdbr https://github.com/cansarigol/pdbr

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=150
target-version=['py39']

[tool.isort]
profile = "black"
multi_line_output = 3